--- a/package.json
+++ b/package.json
@@ -48,25 +48,22 @@
     "@testing-library/dom": "*",
     "@testing-library/react": "11.x"
   },
-  "peerDependencies": {
-    "jest": "*"
-  },
   "devDependencies": {
-    "@babel/plugin-transform-react-jsx": "^7.10.4",
+    "@babel/plugin-transform-react-jsx": "7.x",
     "@babel/preset-env": "7.x",
     "@neutrinojs/airbnb-base": "9.x",
     "@neutrinojs/jest": "9.x",
     "@neutrinojs/library": "9.x",
     "@types/jest": "26.x",
     "@types/react": "16.x",
-    "@types/react-dom": "^16.9.8",
+    "@types/react-dom": "16.x",
     "eslint": "7.x",
     "jest": "26.x",
     "neutrino": "9.x",
     "neutrinojs-typescript": "1.x",
     "neutrinojs-typescript-eslint": "1.x",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "16.x",
+    "react-dom": "16.x",
     "typescript": "4.0.x",
     "webpack": "4.x",
     "webpack-cli": "3.x"
