--- a/package.json
+++ b/package.json
@@ -13,13 +13,10 @@
     "./extend-expect": "./extend-expect/index.js"
   },
   "scripts": {
-    "prebuild": "rewrite-tsconfig",
-    "build": "webpack --mode production",
-    "prelint": "rewrite-tsconfig",
-    "lint": "eslint --format codeframe --report-unused-disable-directives src test",
-    "postlint": "tsc",
+    "build": "rm -rf build && rollup --config rollup.config.mjs",
+    "format": "prettier --write .",
+    "lint": "tsc && prettier --check .",
     "test": "jest",
-    "posttest": "npm -s run lint",
     "test:watch": "jest --watch"
   },
   "repository": {
@@ -46,26 +43,26 @@
   "homepage": "https://github.com/davidje13/flexible-testing-library-react#readme",
   "dependencies": {
     "@testing-library/dom": "*",
-    "@testing-library/react": "11.x"
+    "@testing-library/react": "*"
   },
   "devDependencies": {
-    "@babel/plugin-transform-react-jsx": "7.x",
+    "@babel/core": "7.x",
     "@babel/preset-env": "7.x",
-    "@neutrinojs/airbnb-base": "9.x",
-    "@neutrinojs/jest": "9.x",
-    "@neutrinojs/library": "9.x",
-    "@types/jest": "26.x",
-    "@types/react": "16.x",
-    "@types/react-dom": "16.x",
-    "eslint": "7.x",
-    "jest": "26.x",
-    "neutrino": "9.x",
-    "neutrinojs-typescript": "1.x",
-    "neutrinojs-typescript-eslint": "1.x",
-    "react": "16.x",
-    "react-dom": "16.x",
-    "typescript": "4.0.x",
-    "webpack": "4.x",
-    "webpack-cli": "3.x"
+    "@babel/preset-react": "7.x",
+    "@babel/preset-typescript": "7.x",
+    "@rollup/plugin-node-resolve": "15.x",
+    "@rollup/plugin-typescript": "11.x",
+    "@tsconfig/strictest": "2.x",
+    "@types/jest": "29.x",
+    "@types/react": "18.x",
+    "@types/react-dom": "18.x",
+    "jest": "29.x",
+    "jest-environment-jsdom": "29.x",
+    "prettier": "3.0.2",
+    "react": "18.x",
+    "react-dom": "18.x",
+    "tslib": "*",
+    "typescript": "4.6.x",
+    "rollup": "3.x"
   }
 }
