--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,19 @@
-/* This file is auto-generated;
- * Edit .neutrinorc.js to change configuration.
- */
 {
+  "extends": "@tsconfig/strictest/tsconfig.json",
   "compilerOptions": {
-    "strict": true,
-    "importsNotUsedAsValues": "error",
-    "target": "esnext",
+    "lib": ["es2022", "dom"],
+    "types": ["node", "jest"],
+    "target": "es2022",
     "module": "esnext",
     "moduleResolution": "node",
-    "noEmit": true,
     "isolatedModules": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "noEmit": true
   },
-  "include": [
-    "src",
-    "test"
-  ]
+  "typeAcquisition": {
+    "enable": false
+  },
+  "include": ["src", "test"]
 }
